@@ -41,7 +41,7 @@
 #include <libdv/dv_types.h>
 
 #include <stdio.h>
-#include <stdint.h>
+#include <inttypes.h>
 #include <time.h>
 
 #ifdef __cplusplus
