@@ -46,7 +46,7 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <unistd.h>
-#include <stdint.h>
+#include <inttypes.h>
 #include <pthread.h>
 
 #include "dv.h"
