@@ -29,7 +29,7 @@
 
 #include <stdlib.h>
 #include <string.h>
-#include <stdint.h>
+#include <inttypes.h>
 
 #include "headers.h"
 
